--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:license": "license-checker --production --summary"
   },
   "dependencies": {
+    "@leafac/node": "^0.0.1",
     "commander": "^9.4.1",
     "execa": "^6.1.0",
     "ffmpeg-static": "^5.1.0",
