--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "bin": "./build/index.mjs",
   "scripts": {
     "prepare": "tsc",
-    "start": "nodemon --watch \"./source/**/*.mts\" --ext \"*\" --exec \"npm run prepare && node ./build/index.mjs ./examples/video--short.mp4\"",
+    "start": "nodemon --watch \"./source/**/*.mts\" --ext \"*\" --exec \"npm run prepare && node ./build/index.mjs ./examples/video--long.mp4\"",
     "explore": "npm run prepare && node ./build/index.mjs ./examples/video--short.mp4 --bends",
     "clean": "shx rm -rf \"./examples/video--short{,--*}/\"",
     "test": "prettier --check \"./README.md\" --check \"./package.json\" --check \"./source/**/*.mts\" --end-of-line auto",
