--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,22 +3,22 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [windows, macos, ubuntu]
+        os: [windows-latest, macos-latest, ubuntu-20.04]
         include:
-          - os: windows
+          - os: windows-latest
             build: npx caxa --input . --output "data-bender--windows--${{ github.sha }}.exe" -- "{{caxa}}/node_modules/.bin/node" "{{caxa}}/build/index.mjs"
             artifact: data-bender--windows--${{ github.sha }}.exe
-          - os: macos
+          - os: macos-latest
             build: |
               npx caxa --input . --output "data-bender" -- "{{caxa}}/node_modules/.bin/node" "{{caxa}}/build/index.mjs"
               tar czf "data-bender--macos--${{ github.sha }}.tgz" "data-bender"
             artifact: data-bender--macos--${{ github.sha }}.tgz
-          - os: ubuntu
+          - os: ubuntu-20.04
             build: |
               npx caxa --input . --output "data-bender" -- "{{caxa}}/node_modules/.bin/node" "{{caxa}}/build/index.mjs"
               tar czf "data-bender--linux--${{ github.sha }}.tgz" "data-bender"
             artifact: data-bender--linux--${{ github.sha }}.tgz
-    runs-on: ${{ matrix.os }}-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -35,8 +35,8 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [windows, macos, ubuntu]
-    runs-on: ${{ matrix.os }}-latest
+        os: [windows-latest, macos-latest, ubuntu-20.04]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
